test/tests/errors/error-array-access-out-of-bounds2.sm
// true
// true
// false
/**/
/**/

program {
    array x[0:4]: int;
    x[5] = 1;
}